kubernetes/environments/staging/api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
